# cmlib

./: .clang-format  CMakeLists.txt  README.md  common.h  dump_after.dot  dump_before.dot  exampledump
Allocator/: Allocator.h  Arena.h  ArenaResource.h  CMakeLists.txt  FreeList.h  FreeListResource.h  Free_list.h  Pool.h  PoolResource.h
Allocator/details/: CountingMalloc.h
Allocator/src/: Allocator.c  Arena.c  ArenaResource.c  CountingMalloc.c  FreeList.c  FreeListResource.c  Free_list.c  Pool.c  PoolResource.c
Error/: CMakeLists.txt  Error.c  Error.h  ErrorGen.h  Result.h
Error/include/: Error_gen.h
Error/src/: Error.c
IO/: CMakeLists.txt  IO.h  IOUtils.h
IO/src/: IO.c
List/: CMakeLists.txt  List.h
List/src/: List.c
Logger/: CMakeLists.txt  Error.h  Logger.h  Result.h
Logger/implementation/: ErrorStruct.h  Logger.c  LoggerMacros.h  LoggerStruct.h  Types.h
Logger/include/: ConsoleColor.h  Console_color.h  ErrorGen.h  ErrorStruct.h  LoggerMacros.h
Logger/src/: ConsoleColor.c  Console_color.c  Error.c  Logger.c
ScratchBuffer/: CMakeLists.txt  ScratchBuf.c  ScratchBuf.h  ScratchBuffer.h
ScratchBuffer/src/: ScratchBuf.c  ScratchBuffer.c
Scratch_buffer/: CMakeLists.txt  Scratch_buf.h
Scratch_buffer/src/: Scratch_buf.c
String/: CMakeLists.txt  String.h
String/src/: String.c
Vector/: CMakeLists.txt  Vector.h
Vector/src/: Vector.c
examples/: Arena.c  CMakeLists.txt  FreeList.c  IO.c  List.c  ListBenchmark.c  Log.c  Pool.c  Scratch.c  String.c  Vec.c
tests/: Allocator.c  ArenaAllocator.c  Arena_allocator.c  CMakeLists.txt  FreeListAllocator.c  Free_list_allocator.c  List.c  Log.c  String.c  Tests.c  Tests.h  Vec.c
