cmake_minimum_required(VERSION 4.3)
project(cmlib)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED true)
set(CMAKE_C_FLAGS "-Wall -Wextra")

include(CTest)

add_subdirectory(Error)
add_subdirectory(Allocator)
# add_subdirectory(Hash_table)
add_subdirectory(Logger)
add_subdirectory(List)
add_subdirectory(String)
add_subdirectory(IO)
add_subdirectory(ScratchBuffer)
add_subdirectory(Vector)
add_subdirectory(tests)
add_subdirectory(examples)
